--- a/Nucleus.ModelEditor/Nucleus.ModelEditor.csproj
+++ b/Nucleus.ModelEditor/Nucleus.ModelEditor.csproj
@@ -4,30 +4,45 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows>
-		<IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
-		<IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Nucleus\Nucleus.csproj" />
 	</ItemGroup>
 
+	<!-- ================================================================= -->
+	<!-- Asset copying from BuildAssets -->
+	<!-- ================================================================= -->
+	<PropertyGroup>
+		<IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows>
+		<IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
+		<IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
+	</PropertyGroup>
+
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
 		<ItemGroup>
-			<UniversalAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\universal\**\*" />
+			<UniversalAssets_Project Include="$(MSBuildThisFileDirectory)\BuildAssets\universal\**\*" />
+			<UniversalAssets_Nucleus Include="$(MSBuildThisFileDirectory)..\Nucleus\BuildAssets\universal\**\*" />
 		</ItemGroup>
-		<Copy SourceFiles="@(UniversalAssets)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(UniversalAssets_Project)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(UniversalAssets_Nucleus)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
 
 		<ItemGroup Condition="'$(IsWindows)' == 'true'">
-			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\winnt\**\*" />
+			<PlatformAssets_Project Include="$(MSBuildThisFileDirectory)\BuildAssets\winnt\**\*" />
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)..\Nucleus\BuildAssets\winnt\**\*" />
 		</ItemGroup>
 		<ItemGroup Condition="'$(IsOSX)' == 'true'">
-			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\intel_osx\**\*" />
+			<PlatformAssets_Project Include="$(MSBuildThisFileDirectory)\BuildAssets\intel_osx\**\*" />
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)..\Nucleus\BuildAssets\intel_osx\**\*" />
 		</ItemGroup>
 		<ItemGroup Condition="'$(IsLinux)' == 'true'">
-			<PlatformAssets Include="$(MSBuildThisFileDirectory)..\BuildAssets\linux\**\*" />
+			<PlatformAssets_Project Include="$(MSBuildThisFileDirectory)\BuildAssets\linux\**\*" />
+			<PlatformAssets_Nucleus Include="$(MSBuildThisFileDirectory)..\Nucleus\BuildAssets\linux\**\*" />
 		</ItemGroup>
-		<Copy SourceFiles="@(PlatformAssets)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(PlatformAssets_Project)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(PlatformAssets_Nucleus)" DestinationFolder="$(OutDir)%(RecursiveDir)" SkipUnchangedFiles="true" />
 	</Target>
+	<!-- ================================================================= -->
+	<!-- ================================================================= -->
+	<!-- ================================================================= -->
 </Project>
